--- a/styles/main.css
+++ b/styles/main.css
@@ -44,10 +44,10 @@ h1 {
 }
 
 h2 {
-  font-family: "quicksand", sans-serif;
+  font-family: "circular std", sans-serif;
   font-weight: 300;
-  font-size: 40px;
-  line-height: 43px;
+  font-size: 35px;
+  line-height: 40px;
   letter-spacing: .5px;
   min-height: 100%;
   margin: 0;
