--- a/styles/rfs.css
+++ b/styles/rfs.css
@@ -1,5 +1,5 @@
 .case-study header {
-  height: 70vh;
+  height: 55vh;
   background-image: url(../images/rfs-header.png);
   background-size: 100%;
   background-position: top;
@@ -7,19 +7,23 @@
   background-attachment: fixed;
 }
 
+.case-study header:hover {
+  opacity: 1;
+}
+
 nav {
-  padding-bottom: 1rem;
+  padding-bottom: ;
   background: ;
-  position: fixed;
   width: 100%;
+
 }
 
 nav:hover {
-  background: #fdfdfd;
+  background: ;
 }
 
 .hero {
-
+  background: #ffffff7d;
 }
 
 .prototype {
@@ -41,6 +45,9 @@ nav:hover {
 }
 
 /* intro */
+.intro {
+  text-align: center;
+}
 .introduction, .intro {
   width: 100%;
   margin: auto;
@@ -75,11 +82,6 @@ nav:hover {
 
 .introduction img {
   width: 100%;
-}
-
-.intro {
-  padding-bottom: 5rem;
-  background: white;
 }
 
 .competition {
@@ -258,7 +260,8 @@ span:hover {
 }
 
 .sketch button {
-  background: white;
+  border-color: white;
+  color: white;
 }
 
 .sketch button:hover {
@@ -463,12 +466,8 @@ span:hover {
     background-size: 200%;
   }
 
-  h1 {
-    font-size: 70px;
-  }
-
   #container {
-    width: 80%;
+    width: 95%;
   }
   p {
     font-size: 16px;
