--- a/styles/case-study.css
+++ b/styles/case-study.css
@@ -35,7 +35,7 @@ header {
 
 /* navigation */
 .arrows {
-  width: 90%;
+  width: 95%;
   margin: auto;
 }
 
@@ -43,16 +43,18 @@ header {
   height: 25px;
 }
 
+.left {
+  width: 50%;
+  float: left;
+}
 .right {
   float: right;
-}
-
-.navigation {
-  padding-top: 5rem;
+  width: 50%;
+  text-align: right;
 }
 
 .case-studies {
-  width: 80%;
+  width: 65%;
   margin: auto;
 }
 
@@ -83,7 +85,7 @@ header {
 }
 
 #contact {
-  padding-top: 0;
+  padding: 3rem 0;
   background: none;
 }
 
@@ -94,11 +96,6 @@ header {
 }
 
 @media screen and (max-width: 425px) {
-  .case-hero img {
-    padding: 3rem 0;
-  }
 
-  h1 {
-    margin-top: 0.67em;
-  }
+
 }
