--- a/styles/landing.css
+++ b/styles/landing.css
@@ -2,7 +2,16 @@ nav li a:hover {
   box-shadow: 0px 3px #6654f152;
 }
 
+#container {
+  width: 90%;
+}
+
 /* home-hero*/
+
+.hero {
+  padding: 5rem 0;
+}
+
 .home-hero {
   width: 100%;
   margin: 0 auto;
@@ -23,6 +32,7 @@ nav li a:hover {
   clear: both;
   width: 100%;
   margin: auto;
+  padding: 5rem 0;
 }
 
 p {
@@ -48,6 +58,10 @@ p {
   .home-hero, .contact-text {
     padding: 0;
     width: 80%;
+  }
+
+  .hero, #projects {
+    padding: 3rem 0;
   }
 
 }
